; ModuleID = '/home/carl/AnghaBench/git/extr_date.c_date_mode_from_type.c'
source_filename = "/home/carl/AnghaBench/git/extr_date.c_date_mode_from_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.date_mode = type { i32, i64 }

@date_mode_from_type.mode = internal global %struct.date_mode zeroinitializer, align 8
@DATE_STRFTIME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [50 x i8] c"cannot create anonymous strftime date_mode struct\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.date_mode* @date_mode_from_type(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @DATE_STRFTIME, align 4
  %5 = icmp eq i32 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = call i32 @BUG(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i32, i32* %2, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.date_mode, %struct.date_mode* @date_mode_from_type.mode, i32 0, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.date_mode, %struct.date_mode* @date_mode_from_type.mode, i32 0, i32 1), align 8
  ret %struct.date_mode* @date_mode_from_type.mode
}

declare dso_local i32 @BUG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
